--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-salam cava
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; URL='https://www.google.com'" />
+    <title>iPrimus</title>
+  </head>
+</html>
